Fixed overflow of Trend-tiles

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 body {
@@ -7,7 +7,7 @@ body {
     margin: 0%;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: minmax(55px, 6%) minmax(75px, 8%)  43% 43%;
+    grid-template-rows: minmax(55px, 6vh) minmax(75px, 8vh)  43vh 43vh;
     overflow: auto;
 }
 
@@ -184,9 +184,14 @@ main p {
     grid-area: 3 / 3 / 4 / 4;
 }
 
+#announcements, #trending {
+    display: grid;
+    grid-template-rows: 1fr 10fr;
+}
+
 #ann-tiles, #trend-tiles {
     display: grid;
-    grid-template-rows: repeat(auto-fill minmax(80px, 120px));
+    grid-template-rows: repeat(auto-fill, minmax(80px, 120px));
 }
 
 #trending {
@@ -194,5 +199,5 @@ main p {
 }
 
 #fri-image {
-    height: 70%;
+    height: 100%;
 }
